include/openswmm/legacy/engine/openswmm_solver.h


typedef enum
{
    swmm_POLLUT_RAIN_CONCEN = 500,
    swmm_POLLUT_GW_CONCEN,
    swmm_POLLUT_RDII_CONCEN,
    swmm_POLLUT_DWF_CONCEN,
} swmm_PollutProperty;
typedef enum
{
    swmm_PATTERN_FACTOR = 600,
    swmm_PATTERN_COUNT,
    swmm_PATTERN_TYPE,
} swmm_PatternProperty;
typedef enum
{
    swmm_LANDUSE_SWEEP_INTERVAL = 700,
    swmm_LANDUSE_SWEEP_REMOVAL,
} swmm_LanduseProperty;
typedef enum
{
    swmm_CFS = 0,
    swmm_GPM = 1,
    swmm_MGD = 2,
    swmm_CMS = 3,
    swmm_LPS = 4,
    swmm_MLD = 5
} swmm_FlowUnitsProperty;
typedef enum
{
    ERR_API_NOT_OPEN = -999901,
    ERR_API_NOT_STARTED = -999902,
    ERR_API_NOT_ENDED = -999903,
    ERR_API_OBJECT_TYPE = -999904,
    ERR_API_OBJECT_INDEX = -999905,
    ERR_API_OBJECT_NAME = -999906,
    ERR_API_PROPERTY_TYPE = -999907,
    ERR_API_PROPERTY_VALUE = -999908,
    ERR_API_TIME_PERIOD = -999909,
    ERR_API_HOTSTART_FILE_OPEN = -999910,
    ERR_API_HOTSTART_FILE_FORMAT = -999911,
    ERR_API_IS_RUNNING = -999912,
} swmm_API_Errors;
typedef struct
{
    double precip;           
    double runon;            
    double evap;             
    double infil;            
    double runoff;           
    double maxFlow;          
    double impervRunoff;     
    double pervRunoff;       
} swmm_SubcatchStats;
typedef struct
{
    double avgDepth;             
    double maxDepth;             
    double maxDepthDate;         
    double maxRptDepth;          
    double volFlooded;           
    double timeFlooded;          
    double timeSurcharged;       
    double timeCourantCritical;  
    double totLatFlow;           
    double maxLatFlow;           
    double maxInflow;            
    double maxOverflow;          
    double maxPondedVol;         
    double maxInflowDate;        
    double maxOverflowDate;      
} swmm_NodeStats;
typedef struct
{
    double initVol;      
    double avgVol;       
    double maxVol;       
    double maxFlow;      
    double evapLosses;   
    double exfilLosses;  
    double maxVolDate;   
} swmm_StorageStats;
typedef struct
{
    double  avgFlow;      
    double  maxFlow;      
    double *totalLoad;    
    int     totalPeriods; 
} swmm_OutfallStats;
typedef void (*progress_callback)(double progress);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_run(const char *inputFile, const char *reportFile, const char *outputFile);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_run_with_callback(
    const char *inputFile, const char *reportFile, const char *outputFile, progress_callback callback);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_open(const char *inputFile, const char *reportFile, const char *outputFile);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_start(int saveFlag);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_step(double *elapsedTime);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_stride(int strideStep, double *elapsedTime);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_useHotStart(const char *hotStartFile);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_saveHotStart(const char *hotStartFile);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_end(void);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_report(void);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_close(void);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_getMassBalErr(float *runoffErr, float *flowErr, float *qualErr);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_getVersion(void);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_getError(char *errMsg, int msgLen);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_getErrorFromCode(int error_code, char *outErrMsg[1024]);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_getWarnings(void);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_getCount(int objType);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_getName(int objType, int index, char *name, int size);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_getIndex(int objType, const char *name);
double EXPORT_OPENSWMMCORE_SOLVER_API swmm_getValue(int property, int index);
double EXPORT_OPENSWMMCORE_SOLVER_API swmm_getValueExpanded(int objType, int property, int index, int subIndex, int pollutantIndex);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_setValue(int property, int index, double value);
int EXPORT_OPENSWMMCORE_SOLVER_API swmm_setValueExpanded(int objType, int property, int index, int subIndex, int pollutantIndex, double value);
double EXPORT_OPENSWMMCORE_SOLVER_API swmm_getSavedValue(int property, int index, int period);
void EXPORT_OPENSWMMCORE_SOLVER_API swmm_writeLine(const char *line);
void EXPORT_OPENSWMMCORE_SOLVER_API swmm_decodeDate(double date, int *year, int *month, int *day,
                               int *hour, int *minute, int *second, int *dayOfWeek);
double EXPORT_OPENSWMMCORE_SOLVER_API swmm_encodeDate(int year, int month, int day,
                                 int hour, int minute, int second);