python/openswmm/legacy/engine/solver.pxd


    # SWMM Pollutant properties
    ctypedef enum swmm_PollutProperty:
        swmm_POLLUT_RAIN_CONCEN    # Rain (wet deposition) concentration
        swmm_POLLUT_GW_CONCEN      # Groundwater inflow concentration
        swmm_POLLUT_RDII_CONCEN    # RDII inflow concentration
        swmm_POLLUT_DWF_CONCEN     # Dry weather sanitary flow concentration
        swmm_POLLUT_KDECAY         # First-order decay constant (1/day)
        swmm_POLLUT_CO_POLLUTANT   # Co-pollutant index (-1 = none)
        swmm_POLLUT_CO_FRACTION    # Co-pollutant fraction (0-1)
        swmm_POLLUT_SNOW_ONLY      # Buildup-only-under-snow flag (0/1)
        swmm_POLLUT_INIT_CONCEN    # Initial network concentration (pre-start)

    # SWMM time-pattern properties
    ctypedef enum swmm_PatternProperty:
        swmm_PATTERN_FACTOR  # One multiplier factor (subIndex = factor position)
        swmm_PATTERN_COUNT   # Number of factors (read-only)
        swmm_PATTERN_TYPE    # Pattern type code (read-only)

    # SWMM land-use properties
    ctypedef enum swmm_LanduseProperty:
        swmm_LANDUSE_SWEEP_INTERVAL      # Street-sweeping interval (days)
        swmm_LANDUSE_SWEEP_REMOVAL       # Fraction of buildup available for sweeping
        swmm_LANDUSE_BUILDUP_FUNC        # Buildup function type (subIndex = pollutant)
        swmm_LANDUSE_BUILDUP_COEFF1      # Buildup c0 / max buildup
        swmm_LANDUSE_BUILDUP_COEFF2      # Buildup c1 / rate
        swmm_LANDUSE_BUILDUP_COEFF3      # Buildup c2 / exponent
        swmm_LANDUSE_BUILDUP_NORMALIZER  # Buildup normalizer (0 area, 1 curb)
        swmm_LANDUSE_WASHOFF_FUNC        # Washoff function type
        swmm_LANDUSE_WASHOFF_COEFF       # Washoff coefficient
        swmm_LANDUSE_WASHOFF_EXPON       # Washoff exponent
        swmm_LANDUSE_WASHOFF_SWEEP_EFFIC # Washoff sweeping efficiency (0-1)
        swmm_LANDUSE_WASHOFF_BMP_EFFIC   # Washoff BMP efficiency (0-1)

    # SWMM aquifer properties (input-file units)
    ctypedef enum swmm_AquiferProperty:
        swmm_AQUIFER_POROSITY = 800      # Porosity (fraction, pre-start-only)
        swmm_AQUIFER_WILTING_POINT       # Wilting point (fraction, pre-start-only)
        swmm_AQUIFER_FIELD_CAPACITY      # Field capacity (fraction, pre-start-only)
        swmm_AQUIFER_CONDUCTIVITY        # Saturated conductivity (in/hr or mm/hr)
        swmm_AQUIFER_CONDUCT_SLOPE       # Conductivity slope
        swmm_AQUIFER_TENSION_SLOPE       # Tension slope (ft or m)
        swmm_AQUIFER_UPPER_EVAP_FRAC     # Upper-zone evap fraction (0-1)
        swmm_AQUIFER_LOWER_EVAP_DEPTH    # Lower-zone evap depth (ft or m)
        swmm_AQUIFER_LOWER_LOSS_COEFF    # Lower-zone loss coeff (in/hr or mm/hr)
        swmm_AQUIFER_BOTTOM_ELEV         # Bottom elevation (ft or m, pre-start-only)
        swmm_AQUIFER_WATER_TABLE_ELEV    # Water table elev (ft or m, pre-start-only)
        swmm_AQUIFER_UPPER_MOISTURE      # Upper moisture (fraction, pre-start-only)

    # SWMM flow units enumeration
    ctypedef enum swmm_FlowUnitsProperty:
        swmm_CFS  # Cubic feet per second
        swmm_GPM  # Gallons per minute
        swmm_MGD  # Million gallons per day
        swmm_CMS  # Cubic meters per second
        swmm_LPS  # Liters per second
        swmm_MLD  # Million liters per day

    # SWMM API function return error codes
    ctypedef enum swmm_API_Errors:
        ERR_API_NOT_OPEN          # API not open
        ERR_API_NOT_STARTED       # API not started
        ERR_API_NOT_ENDED         # API not ended
        ERR_API_OBJECT_TYPE       # Invalid object type
        ERR_API_OBJECT_INDEX      # Invalid object index
        ERR_API_OBJECT_NAME       # Invalid object name
        ERR_API_PROPERTY_TYPE     # Invalid property type
        ERR_API_PROPERTY_VALUE    # Invalid property value
        ERR_API_TIME_PERIOD       # Invalid time period
        ERR_API_HOTSTART_FILE_OPEN # Error opening hotstart file
        ERR_API_HOTSTART_FILE_FORMAT # Invalid hotstart file format
        ERR_API_IS_RUNNING        # Simulation is already running

    # SWMM API function return simulation progress
    ctypedef void (*progress_callback)(double progress); 

    # SWMM API function prototypes
    # param: inp_file: input file name
    # param: rpt_file: report file name
    # param: out_file: output file name
    # Returns: error code (0 if successful)
    cdef int swmm_run(char* inp_file, char* rpt_file, char* out_file)


    # SWMM API function prototypes
    # param: inp_file: input file name
    # param: rpt_file: report file name
    # param: out_file: output file name
    # param: progress: progress callback
    # Returns: error code (0 if successful)
    cdef int swmm_run_with_callback(char* inp_file, char* rpt_file, char* out_file, progress_callback progress)

    # Open a SWMM input file
    # param: inp_file: input file name
    # param: rpt_file: report file name
    # parm: out_file: output file name
    # Returns: error code (0 if successful)
    cdef int swmm_open(char* inp_file, char* rpt_file, char* out_file)

    #  Starts a SWMM simulation
    #  param: save_flag = TRUE if simulation results saved to binary file 
    #  Returns: error code
    cdef int swmm_start(int save_flag)

    # Performs a single time step of a SWMM simulation
    # param: elapsed_time: elapsed time in seconds
    # Returns: error code
    cdef int swmm_step(double* elapsed_time)

    # Performs a single stride of a SWMM simulation
    # param: strideStep: number of steps to perform
    # param: elapsedTime: elapsed time in seconds
    # Returns: error code
    cdef int swmm_stride(int strideStep, double *elapsedTime)

    # Uses provide hot start file to initialize the simulation
    # param: hotStartFile: hot start file name
    # Returns: error code
    cdef int swmm_useHotStart(const char* hotStartFile)

    # Saves the current simulation state to a hot start file
    # param: hotStartFile: hot start file name
    # Returns: error code
    cdef int swmm_saveHotStart(const char* hotStartFile)

    # Ends a SWMM simulation
    # Returns: error code
    cdef int swmm_end()

    # Writes a report to the report file
    # Returns: error code
    cdef int swmm_report()

    # Closes a SWMM simulation
    # Returns: error code
    cdef int swmm_close()

    # Retrieves the mass balance errors
    # param: runoffErr: runoff error
    # param: flowErr: flow error
    # param: qualErr: quality error
    cdef int swmm_getMassBalErr(float *runoffErr, float *flowErr, float *qualErr)

    # Gets the version of the SWMM engine
    # Returns: version number
    cdef int swmm_getVersion()

    # Retrieves the error message from the SWMM engine
    # param: errMsg: error message
    # param: msgLen: length of the error message
    # Returns: error code
    cdef int swmm_getError(char *errMsg, int msgLen)

    # Retrieves the error message from the SWMM engine
    # param: error_code: error code
    # param: outErrMsg: error message
    # Returns: error code
    cdef int swmm_getErrorFromCode(int error_code, char *outErrMsg[1024])

    # Retrieves the number of warnings from the SWMM engine
    cdef int swmm_getWarnings()
    
    # Retrieves the number of objects of a given type
    # param: objType: object type
    cdef int swmm_getCount(int objType)

    # Retrieves the name of an object of a given type and index
    # param: objType: object type
    # param: index: object index
    # param: name: object name
    # param: size: size of the object name
    cdef int swmm_getName(int objType, int index, char *name, int size)

    # Retrieves the index of an object of a given type and name
    # param: objType: object type
    # param: name: object name
    cdef int swmm_getIndex(int objType, const char *name)

    # Retrieves the value of a property for an object of a given type and index
    # param: property: property type
    # param: index: object index
    cdef double swmm_getValue(int property, int index)



    # Retrieves the value of a property for an object of a given type and index
    # param: objType: object type
    # param: property: property type
    # param: index: object index
    # param: subIndex: sub-index
    # param: pollutantIndex: pollutant index
    cdef double swmm_getValueExpanded(int objType, int property, int index, int subIndex, int pollutantIndex)

    # Sets the value of a property for an object of a given type and index
    # param: property: property type
    # param: index: object index
    # param: value: property value
    cdef int swmm_setValue(int property, int index,  double value)
    
    # Sets the value of a property for an object of a given type and index
    # param: objType: object type
    # param: property: property type
    # param: index: object index
    # param: value: property value
    cdef int swmm_setValueExpanded(int objType, int property, int index, int subindex, int pollutantIndex, double value)

    # Sets (or replaces) the treatment expression for a node/pollutant pair
    # param: nodeIndex: node index
    # param: pollutantIndex: pollutant index
    # param: expression: treatment expression in input-file form, e.g. "R = 0.5"
    cdef int swmm_setTreatment(int nodeIndex, int pollutantIndex, const char *expression)

    # Removes the treatment expression for a node/pollutant pair
    # param: nodeIndex: node index
    # param: pollutantIndex: pollutant index
    cdef int swmm_clearTreatment(int nodeIndex, int pollutantIndex)

    # Sets the underdrain flow parameters of a LID process at runtime
    # param: lidIndex: LID process index
    # param: coeff: underdrain flow coefficient (in/hr or mm/hr)
    # param: expon: underdrain head exponent
    # param: offset: offset height of underdrain (in or mm)
    cdef int swmm_setLidDrain(int lidIndex, double coeff, double expon, double offset)

    # Retrieves the value of a property for an object of a given type and index
    # param: property: property type
    # param: index: object index
    # param: period: time period
    cdef double swmm_getSavedValue(int property, int index, int period)
    
    # Writes a line to the SWMM report file
    # param: line: line to write
    cdef void swmm_writeLine(const char *line)

    # Decodes a SWMM datetime into a datetime object    
    cdef void swmm_decodeDate(double date, int *year, int *month, int *day, int *hour, int *minute, int *second, int *dayOfWeek)

    # Encodes a datetime object into a SWMM datetime
    cdef double swmm_encodeDate(int year, int month, int day, int hour, int minute, int second)

    # --- Statistics and mass balance structures ---

    ctypedef struct swmm_SubcatchStats:
        double precip
        double runon
        double evap
        double infil
        double runoff
        double maxFlow
        double impervRunoff
        double pervRunoff

    ctypedef struct swmm_NodeStats:
        double avgDepth
        double maxDepth
        double maxDepthDate
        double maxRptDepth
        double volFlooded
        double timeFlooded
        double timeSurcharged
        double timeCourantCritical
        double totLatFlow
        double maxLatFlow
        double maxInflow
        double maxOverflow
        double maxPondedVol
        double maxInflowDate
        double maxOverflowDate

    ctypedef struct swmm_StorageStats:
        double initVol
        double avgVol
        double maxVol
        double maxFlow
        double evapLosses
        double exfilLosses
        double maxVolDate

    ctypedef struct swmm_OutfallStats:
        double avgFlow
        double maxFlow
        double *totalLoad
        int totalPeriods
